--- a/Exercises/makemore exercises/part3_bn_exercises.ipynb
+++ b/Exercises/makemore exercises/part3_bn_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,18 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'n_embd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 69\u001b[0m\n\u001b[1;32m     66\u001b[0m n_hidden \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m\n\u001b[1;32m     67\u001b[0m g \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mGenerator()\u001b[39m.\u001b[39mmanual_seed(\u001b[39m2147483647\u001b[39m)\n\u001b[0;32m---> 69\u001b[0m C \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((vocab_size, n_embd))\n\u001b[1;32m     71\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m using_batch_norm:\n\u001b[1;32m     72\u001b[0m     layers \u001b[39m=\u001b[39m [\n\u001b[1;32m     73\u001b[0m         Linear(n_embd \u001b[39m*\u001b[39m block_size, n_hidden), Tanh(),\n\u001b[1;32m     74\u001b[0m         Linear(         n_hidden, n_hidden), Tanh(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     78\u001b[0m         Linear(         n_hidden, vocab_size)\n\u001b[1;32m     79\u001b[0m     ]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'n_embd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46497\n"
      ]
     }
    ],
@@ -264,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +321,7 @@
     "\n",
     "    # update to data ratio: How great is the update compared to the data itself?\n",
     "    with torch.no_grad():\n",
-    "        update_to_data_ratio.append([(lr * p.grad.std() / p.data.std()).log10().item() for p in parameters if p.grad is not None])\n"
+    "        update_to_data_ratio.append([(lr * p.grad.std() / p.data.std()).log10().item() for p in parameters if p.grad is not None])"
    ]
   },
   {
