reorganizing README inputs all in data file adding images to images file

--- a/Exercises/makemore exercises/part2_MLP_exercises.ipynb
+++ b/Exercises/makemore exercises/part2_MLP_exercises.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "words = open(\"../../makemore/names.txt\", \"r\").read().splitlines()\n",
+    "words = open(\"../../data/names.txt\", \"r\").read().splitlines()\n",
     "print(words[:8])\n",
     "print(len(words))"
    ]
@@ -86,6 +86,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -295,6 +296,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
