--- a/Exercises/makemore exercises/part5_wavenet_exercices.ipynb
+++ b/Exercises/makemore exercises/part5_wavenet_exercices.ipynb
@@ -46,7 +46,7 @@
         }
       ],
       "source": [
-        "words = open(\"../../makemore/names.txt\", \"r\").read().splitlines()\n",
+        "words = open(\"../../data/names.txt\", \"r\").read().splitlines()\n",
         "print(words[:8])\n",
         "print(len(words))"
       ]
