--- a/makemore/part3_bn.ipynb
+++ b/makemore/part3_bn.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "words = open(\"names.txt\", \"r\").read().splitlines()\n",
+    "words = open(\"../data/names.txt\", \"r\").read().splitlines()\n",
     "print(words[:8])\n",
     "print(len(words))"
    ]
@@ -621,6 +621,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -851,6 +852,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1005,6 +1007,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1209,6 +1212,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1216,6 +1220,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1268,6 +1273,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
