--- a/Exercises/makemore exercises/part1_bigrams._exercises.ipynb
+++ b/Exercises/makemore exercises/part1_bigrams._exercises.ipynb
@@ -30,7 +30,7 @@
    ],
    "source": [
     "# reading the data\n",
-    "words = open(\"names.txt\", \"r\").read().splitlines()\n",
+    "words = open(\"../../data/names.txt\", \"r\").read().splitlines()\n",
     "\n",
     "# Exploring\n",
     "print(f\"first 10 words{words[:10]}\")\n",
@@ -158,6 +158,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,6 +360,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -823,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
