--- a/Exercises/makemore exercises/part3_bn_exercises.ipynb
+++ b/Exercises/makemore exercises/part3_bn_exercises.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "words = open(\"../../makemore/names.txt\", \"r\").read().splitlines()\n",
+    "words = open(\"../../data/names.txt\", \"r\").read().splitlines()\n",
     "print(words[:8])\n",
     "print(len(words))"
    ]
@@ -325,6 +325,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -332,6 +333,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -514,6 +516,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -655,6 +658,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -816,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
