--- a/makemore/part1_bigrams.ipynb
+++ b/makemore/part1_bigrams.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
    ],
    "source": [
     "# reading the data\n",
-    "words = open(\"names.txt\", \"r\").read().splitlines()\n",
+    "words = open(\"../data/names.txt\", \"r\").read().splitlines()\n",
     "\n",
     "# Exploring\n",
     "print(f\"first 10 words{words[:10]}\")\n",
@@ -1218,6 +1218,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1353,7 +1354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
