--- a/makemore/part4_backprop.ipynb
+++ b/makemore/part4_backprop.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "words = open(\"names.txt\", \"r\").read().splitlines()\n",
+    "words = open(\"../data/names.txt\", \"r\").read().splitlines()\n",
     "print(words[:8])\n",
     "print(len(words))"
    ]
@@ -916,7 +916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
