fixing markdown numbering

--- a/nanoGPT/part6_nano_gpt.ipynb
+++ b/nanoGPT/part6_nano_gpt.ipynb
@@ -1654,7 +1654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.2 - Adding Residual Connections (Skip Connections)"
+    "## 7.2 - Adding Residual Connections (Skip Connections)"
    ]
   },
   {
@@ -2062,7 +2062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9.3- Try"
+    "## 9.3- Try"
    ]
   },
   {
