--- a/GPT2/1_2_dataloader_and_init.ipynb
+++ b/GPT2/1_2_dataloader_and_init.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare based on the previous notebook"
+    "# Code from the previous notebook"
    ]
   },
   {
