adding hparams notebook

--- a/GPT2/1_2_dataloader_and_init.ipynb
+++ b/GPT2/1_2_dataloader_and_init.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Starting from `45:50`"
+    "Starting from [45:50](https://www.youtube.com/watch?v=l8pRSuU81PU&t=2750s)"
    ]
   },
   {
