--- a/GPT2/2_optimization.ipynb
+++ b/GPT2/2_optimization.ipynb
@@ -8,10 +8,15 @@
     }
    },
    "source": [
-    "Starting from `01:22:00`\n",
+    "Starting from [01:22:18](https://www.youtube.com/watch?v=l8pRSuU81PU&t=4938s)\n",
     "\n",
     "🟢 **Run this Notebook with an Nvidia GPU (Ada, Ampere or later)**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
